Connected database to application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=asset-craft
 
-#spring.datasource.url=jdbc:mysql:3306//localhost:3306/db_example
-#spring.datasource.username=admin
-#spring.datasource.password=e92dd2a18183
+spring.datasource.url=jdbc:mysql://localhost:3306/asset_craft
+spring.datasource.username=admin
+spring.datasource.password=AssetCraftSQL
