Added adding product with images mechanics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/asset_craft
 spring.datasource.username=admin
 spring.datasource.password=AssetCraftSQL
 
+file.upload-dir=./src/main/resources/static/images/temp
